@@ -7,13 +7,11 @@
 
 package org.elasticsearch.xpack.esql.qa.parquet;
 
-import org.elasticsearch.core.PathUtils;
 import org.elasticsearch.test.cluster.ElasticsearchCluster;
 import org.elasticsearch.test.cluster.local.LocalClusterConfigProvider;
 import org.elasticsearch.test.cluster.local.distribution.DistributionType;
+import org.elasticsearch.xpack.esql.datasources.FixtureUtils;
 
-import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.function.Supplier;
 
 import static org.elasticsearch.xpack.esql.datasources.S3FixtureUtils.ACCESS_KEY;
@@ -24,10 +22,31 @@ import static org.elasticsearch.xpack.esql.datasources.S3FixtureUtils.SECRET_KEY
  */
 public class Clusters {
 
+    /**
+     * Cluster for tests that only need HTTP access (e.g. downloading from public URLs).
+     * No S3/GCS client settings are configured.
+     */
+    public static ElasticsearchCluster httpOnlyTestCluster() {
+        return ElasticsearchCluster.local()
+            .distribution(DistributionType.DEFAULT)
+            .shared(true)
+            .plugin("inference-service-test")
+            .module("repository-s3")
+            .module("repository-gcs")
+            .setting("xpack.security.enabled", "false")
+            .setting("xpack.license.self_generated.type", "trial")
+            .setting("xpack.ml.enabled", "false")
+            .setting("path.repo", FixtureUtils.pathRepoRootForIcebergFixtures(Clusters.class))
+            .jvmArg("--add-opens=java.base/java.nio=ALL-UNNAMED")
+            .jvmArg("-Darrow.allocation.manager.type=Unsafe")
+            .build();
+    }
+
     public static ElasticsearchCluster testCluster(Supplier<String> s3EndpointSupplier, LocalClusterConfigProvider configProvider) {
         return ElasticsearchCluster.local()
             .distribution(DistributionType.DEFAULT)
             .shared(true)
+            .plugin("inference-service-test")
             // Enable S3 repository plugin for S3 access
             .module("repository-s3")
             // Enable GCS repository module for GCS access
@@ -39,7 +58,7 @@ public class Clusters {
             .setting("xpack.ml.enabled", "false")
             // Allow the LOCAL storage backend to read fixture files from the test resources directory.
             // The esql-datasource-http plugin's entitlement policy uses shared_repo for file read access.
-            .setting("path.repo", fixturesPath())
+            .setting("path.repo", FixtureUtils.pathRepoRootForIcebergFixtures(Clusters.class))
             // S3 client configuration for accessing the S3HttpFixture
             .setting("s3.client.default.endpoint", s3EndpointSupplier)
             // S3 credentials must be stored in keystore, not as regular settings
@@ -64,18 +83,5 @@ public class Clusters {
 
     public static ElasticsearchCluster testCluster(Supplier<String> s3EndpointSupplier) {
         return testCluster(s3EndpointSupplier, config -> {});
-    }
-
-    private static String fixturesPath() {
-        URL resourceUrl = Clusters.class.getResource("/iceberg-fixtures");
-        if (resourceUrl != null && resourceUrl.getProtocol().equals("file")) {
-            try {
-                return PathUtils.get(resourceUrl.toURI()).toAbsolutePath().toString();
-            } catch (URISyntaxException e) {
-                throw new IllegalStateException("Failed to resolve fixtures path", e);
-            }
-        }
-        // Fall back to a safe default; LOCAL tests will fail gracefully
-        return "/tmp";
     }
 }
